update company name

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -10,7 +10,7 @@
   <body>
     <footer id="footer">
       <div class="footer-content">
-        <p>&copy; 2024 Your Company. All rights reserved.</p>
+        <p>&copy; 2024 LearnifyX. All rights reserved.</p>
         <nav class="footer-nav">
           <a href="/privacy" target="_parent">Privacy Policy</a>
           <a href="/terms" target="_parent">Terms of Service</a>
