--- a/templates/account.html
+++ b/templates/account.html
@@ -3,12 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/static/general.css" />
     <link rel="stylesheet" href="/static/styles/account.css" />
     <title>My Account</title>
     <style>
-      {% if user %}
+            {% if user %}
       #account-page {
         top: 65px;
         margin: 0 150px 0px 0;
@@ -18,6 +21,10 @@
         margin: 0 150px 100px 0;
       }
       {% endif %}
+      @media (max-width: 1199px) {
+        #account-page{
+          margin:0px;
+      }}
     </style>
   </head>
   <body>
