--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,10 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/static/styles/home.css" />
     <link rel="stylesheet" href="/static/styles/header.css" />
     <link rel="stylesheet" href="/static/general.css" />
@@ -143,9 +146,6 @@
         <button class="view-all">View all</button>
       </a>
     </div>
-
-    <!-- add logout -->
-    <a href="/logout">Log out</a>
 
     <iframe src="/footer" id="iframe-footer"></iframe>
     <script src="/static/general.js"></script>
