--- a/static/styles/header.css
+++ b/static/styles/header.css
@@ -83,7 +83,7 @@ body {
   color: white;
 }
 .header-scroll .dropdown-content {
-  background-color: #999897;
+  background-color: #9dc08b;
 }
 #mobile-vertical-navbar {
   position: fixed;
