--- a/templates/account.html
+++ b/templates/account.html
@@ -66,10 +66,7 @@
         <p><strong>Date ordered:</strong> {{order.created_at}}</p>
         <p><strong>Access duration:</strong> {{order.access_duration}}</p>
         <p><strong>Certification:</strong> {{order.certification}}</p>
-        {% endfor %} {% endif %}
-
-        <a href="/logout">Log out</a>
-        {% else %}
+        {% endfor %} {% endif %} {% else %}
         <!-- login box -->
         <h1>Login</h1>
         <form action="/login" method="POST">
