change forgot_password styling

--- a/templates/forgot_password.html
+++ b/templates/forgot_password.html
@@ -8,40 +8,40 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
     <link rel="stylesheet" href="/static/general.css" />
-    <link rel="stylesheet" href="/static/styles/home.css" />
-    <link rel="stylesheet" href="/static/styles/header.css"/>
+    <link rel="stylesheet" href="/static/styles/forget_password.css" />
+
     <title>Forgot Password</title>
   </head>
-    <div id="body-container">
       <iframe src="/header" id="iframe-header"></iframe>
-    </div>
-
-    <div id="forgot-password">
-      <h1>Forgot Password</h1>
-      <form action="/forgot-password" method="POST">
-        <label for="email">Enter your email:</label>
-        <input type="email" name="email" id="email"/>
-        <br>
-        <button type="submit">Enter</button>
-      </form>
-    </div>
-
-    <!-- display whether email does not exist or instruction -->
-    {% with link = get_flashed_messages(category_filter='link') %}
-        {% if link %}
-        <div id="reset-link" class="reset-link">
-          We have received a request to reset your password. <br>
-          Please click the following link to reset your password:
+      <div id="body-container">
+        <div id="forgot-password">
+          <h1>Forgot Password</h1>
+          <form action="/forgot-password" method="POST">
+            <label for="email">Enter your email:</label>
+            <input type="email" name="email" id="email"/>
+            <br>
+            <button type="submit">Enter</button>
+          </form>
         </div>
-        <a href="{{link[-1]}}" id="reset-link" class="reset-link">Reset password</a>
-        {% endif %}
-    {% endwith %}
-
-    {% with messages = get_flashed_messages(category_filter='message') %}
-        {% if messages %}
-        <p class="flashed-msg">{{ messages[-1]}}</p>
-        {% endif %}
-    {% endwith %}
+    
+        <!-- display whether email does not exist or instruction -->
+        {% with link = get_flashed_messages(category_filter='link') %}
+            {% if link %}
+            <div id="reset-link" class="reset-link">
+              We have received a request to reset your password. <br>
+              Please click the following link to reset your password:
+            </div>
+            <a href="{{link[-1]}}" id="reset-link" class="reset-link">Reset password</a>
+            {% endif %}
+        {% endwith %}
+    
+        {% with messages = get_flashed_messages(category_filter='message') %}
+            {% if messages %}
+            <p class="flashed-msg">{{ messages[-1]}}</p>
+            {% endif %}
+        {% endwith %}
+      </div>
+    
 
 
     <iframe src="/footer" id="iframe-footer"></iframe>
