--- a/static/general.css
+++ b/static/general.css
@@ -19,10 +19,9 @@ body {
 
 #iframe-footer {
   border: none;
-  width: 100%;
+  width: 100vw;
 }
 
-#forgot-password,
 #reset-link,
 #course-detail {
   padding-top: 100px;
