--- a/templates/account.html
+++ b/templates/account.html
@@ -13,6 +13,7 @@
     <style>
       {% if user %}
       #account-page {
+        height: 100vh;
         top: 65px;
         margin: 0 150px 0px 0;
       }
