--- a/static/styles/home.css
+++ b/static/styles/home.css
@@ -19,19 +19,6 @@
   z-index: -1;
 }
 
-@media (max-width: 1199px) {
-  #image-container {
-    top: 3%;
-    left: 73%;
-  }
-  #image-container h1 {
-    font-size: 8vw;
-  }
-}
-
-@media (max-width: 767px) {
-}
-
 .featured-container {
   background-color: #edf1d6;
   padding: 20px;
@@ -93,7 +80,7 @@
 
 .featured-card img {
   width: 100%;
-  height: auto;
+  height: 150px;
 }
 
 .card-content {
@@ -158,8 +145,7 @@ h3 {
 }
 .course-card img {
   width: 100%;
-  height: auto;
-  display: block;
+  height: 150px;
 }
 .card-info .provider {
   font-size: 14px;
@@ -193,4 +179,25 @@ h3 {
   cursor: pointer;
   font-size: 14px;
   border-radius: 6px;
+}
+
+@media (max-width: 1199px) {
+  .featured-cards {
+    flex-direction: column;
+    align-items: center;
+  }
+  .course-cards {
+    flex-direction: column;
+    align-items: center;
+  }
+  #image-container {
+    top: 3%;
+    left: 73%;
+  }
+  #image-container h1 {
+    font-size: 8vw;
+  }
+}
+
+@media (max-width: 767px) {
 }
