--- a/templates/header.html
+++ b/templates/header.html
@@ -12,7 +12,9 @@
   </head>
   <body>
     <header class="header" id="header">
-      <div>random image</div>
+      <div id="logo-container">
+        <img src="/static/img/logo.png" />
+      </div>
       <nav id="nav-bar">
         <a href="/" target="_parent">Home</a>
         <a href="/about" target="_parent">About Us</a>
