--- a/templates/instructor_profile.html
+++ b/templates/instructor_profile.html
@@ -39,6 +39,7 @@
         <p><strong>Zipcode:</strong> {{instructor.zipcode}}</p>
         <p><strong>City: </strong> {{instructor.city}}</p>
         <p><strong>Country:</strong> {{instructor.country}}</p>
+        <p><strong>Specialization:</strong> {{instructor.specialization}}</p>
       </div>
 
       <!-- add course button - only visible to instructors -->
