Eduardo Image Uploaded
Pricing chart updated

--- a/templates/about.html
+++ b/templates/about.html
@@ -36,7 +36,7 @@
                     <p>RMIT University, Saigon South Campus</p>
                 </div>
                 <div class="col-md-6 team-member">
-                    <img src="path-to-random-photo2.jpg" alt="Eduardo Salcedo Fuentes" id="modalBtn2">
+                    <img src="/static/img/eduardo_portrait.jpg" alt="Eduardo Salcedo Fuentes" id="modalBtn2">
                     <h4>Eduardo Salcedo Fuentes</h4>
                     <p>RMIT University, Saigon South Campus</p>
                 </div>
