--- a/templates/footer.html
+++ b/templates/footer.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="/static/img/website-logo.png" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/static/styles/footer.css" />
-    <title>Document</title>
+    <title>Footer</title>
   </head>
   <body>
     <footer id="footer">
