--- a/static/styles/about.css
+++ b/static/styles/about.css
@@ -62,6 +62,9 @@ body {
     max-width: 500px;
     text-align: center;
     border-radius: 10px;
+    position: relative;
+    top: 30%;
+    transform: translateY(-50%); /* Centers the modal vertically */
     animation: scaleIn 0.5s ease forwards;
 }
 
