--- a/templates/pricing.html
+++ b/templates/pricing.html
@@ -18,13 +18,9 @@
     </div>
     <h1>Our Prices</h1>
     
-    <div class="table">
+    <div class="table-wrapper">
         <table class="price-table">
             <tbody>
-                <tr>
-                    <td>INSTRUCTORS</td>
-                    
-                </tr>
                 <tr>
                     <td class="price-blank"></td>
                     <td class="price-blank"></td>
@@ -35,17 +31,17 @@
                     <td></td>
                     <td>
                         Personal
-                        <br><small style="font-size: 12px; font-weight: 400;">Best for new instructors</small>
+                        <br><small>Best for new instructors</small>
 
                     </td>
                     
                     <td>
                         Business
-                        <br><small style="font-size: 12px; font-weight: 400;">Advanced Instructors</small>
+                        <br><small>Advanced Instructors</small>
                     </td>
-                    <td class="green-width">
+                    <td>
                         Professional
-                        <br><small style="font-size: 12px; font-weight: 400;">The entire Academy</small>
+                        <br><small>The entire Academy</small>
                     </td>
                 </tr>
                 <tr>
@@ -68,13 +64,13 @@
                 </tr>
                 
                 <tr>
-                    <td><a href="#wordpress-asset-updates" class="price-table-help"><i class="far fa-fw fa-question-circle"></i></a> Starting Courses</td>
+                    <td>Starting Courses</td>
                     <td>1</td>
                     <td>2</td>
                     <td>3</td>
                 </tr>
                 <tr>
-                    <td><i class="far fa-fw fa-question-circle"></i></a> Price per additional Course</td>
+                    <td>Price per additional Course</td>
                     <td>&dollar;19.99/month</td>
                     <td>19.99/month</td>
                     <td>15.99/month</td>
