--- a/templates/about.html
+++ b/templates/about.html
@@ -31,7 +31,7 @@
 
             <div class="row">
                 <div class="col-md-6 team-member">
-                    <img src="path-to-random-photo1.jpg" alt="Duy Huynh Ngoc" id="modalBtn1">
+                    <img src="/static/img/duy_portrait.jpeg" alt="Duy Huynh Ngoc" id="modalBtn1">
                     <h4>Duy Huynh Ngoc</h4>
                     <p>RMIT University, Saigon South Campus</p>
                 </div>
@@ -103,7 +103,7 @@
             <span class="close" id="close4">&times;</span>
             <h2>Tu Tran Thanh</h2>
             <p>Email: <a href="mailto:s3957386@rmit.edu.vn">s3957386@rmit.edu.vn</a></p>
-            <p>Age: XX</p>
+            <p>Age: 21</p>
             <p>Country: Vietnam</p>
             <p>Major: BSc in Software Engineering</p>
             <p>RMIT University, Saigon South Campus</p>
