--- a/static/styles/contact.css
+++ b/static/styles/contact.css
@@ -17,8 +17,7 @@ h1 {
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
     padding: 40px;
     max-width: 800px;
-    margin: 0 auto;
-    margin-bottom: 60px;
+    margin: 20px auto;
 }
 
 .form-group label {
