--- a/static/styles/privacy.css
+++ b/static/styles/privacy.css
@@ -8,10 +8,8 @@ body {
     padding: 40px;
     border-radius: 8px;
     box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
-    margin-top: 20px;
+    margin: 20px auto;
     max-width: 900px;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 h1 {
