update Copyright page

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -15,7 +15,8 @@
         <nav class="footer-nav">
           <a href="/privacy" target="_parent">Privacy Policy</a>
           <a href="/terms" target="_parent">Terms of Service</a>
-          <a href="/contact" target="_parent">Contact Us</a>
+          <!-- <a href="/contact" target="_parent">Contact Us</a> -->
+          <a href="/copyright" target="_parent">Copyright</a>
         </nav>
       </div>
     </footer>
