--- a/templates/add_course.html
+++ b/templates/add_course.html
@@ -56,7 +56,7 @@
             <option value="Design">Design</option>
             <option value="Marketing">Marketing</option>
             <option value="Data Science">Data Science</option>
-            <option value="Cloud-computing">Cloud Computing</option>
+            <option value="Cloud Computing">Cloud Computing</option>
             <option value="Security">Security</option>
             <option value="Other">Other</option>
           </select>
