Faq message modified

--- a/templates/faqs.html
+++ b/templates/faqs.html
@@ -45,12 +45,12 @@
             <h1> Payments </h1>
             <details>
                 <summary>What payment methods do you accept?</summary>
-                <p>We accept all major credit cards, PayPal, and e-wallet payments for your convenience.</p>
+                <p>We accept all major credit cards, PayPal (not available at the moment), and e-wallet payments (not available at the moment) for your convenience.</p>
             </details>
 
             <details>
                 <summary>Are there any additional fees I should be aware of? Is any content hidden behind a paywall?</summary>
-                <p>We try to be as straight forward as we can be with our pricing. We assure you that our instructors' do not hide any extra content in their courses as it is against our policy.</p>
+                <p>We try to be as straight forward as we can be with our pricing. We assure you that our instructors do not hide any extra content in their courses as it is against our policy.</p>
             </details>
 
             <details>
