Fixed View all Link

--- a/templates/home.html
+++ b/templates/home.html
@@ -25,8 +25,9 @@
 
     <div class="featured-container">
       <h2>Get started with Our Featured Course</h2>
-      <button class="featured-button">View all Courses</button>
-
+      <a href="/courses/browse/name">
+        <button class="featured-button">View all Courses</button>
+      </a>
       <div class="featured-tabs">
         <button class="featured-tab active" data-target="course">
           Courses
